[package]
name = "aquila_auth_github"
version = "0.1.0"
edition = "2024"

[dependencies]
aquila_core = { path = "../aquila_core" }
reqwest = { workspace = true, features = ["json", "form", "rustls"], version = "1.0.0" }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
