[package]
name = "aquila_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aquila_client = { path = "../aquila_client" }
aquila_core = { path = "../aquila_core" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
chrono = {workspace = true}
serde_json = {workspace = true}
rand = "0.9"
walkdir = "2.5"
whoami = "2.0"
mime_guess = "2.0"
