[package]
name = "aquila_cli"
version = "0.4.0"
edition = "2024"
description = "Aquila asset server CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[[bin]]
name = "aquila"
path = "src/main.rs"

[dependencies]
aquila_client = { path = "../aquila_client" ,version = "0.4.0"}
aquila_core = { path = "../aquila_core" ,version = "0.3.0"}
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
chrono = {workspace = true}
serde_json = {workspace = true}
rand = "0.9"
walkdir = "2.5"
whoami = "2.0"
mime_guess = "2.0"
