[package]
name = "aquila_client"
version = "0.1.0"
edition = "2024"
description = "Aquila asset server client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[dependencies]
aquila_core = { path = "../aquila_core" ,version = "0.1.0"}
reqwest = {workspace = true}
tokio = { workspace = true, features = ["fs"] }
anyhow = { workspace = true }
sha2 = {workspace = true}
hex = {workspace = true}
thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }

