[package]
name = "aquila_core"
version = "0.2.0"
edition = "2024"
description = "Core module of aquila asset server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"


[dependencies]
serde = { workspace = true }
bytes = {workspace = true}
chrono = {workspace = true}
serde_json = {workspace = true}
thiserror = "2.0"
