[package]
name = "aquila_opendal"
version = "0.2.0"
edition = "2024"
description = "Aquila asset server opendal file backend implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[dependencies]
aquila_core = { path = "../aquila_core" ,version = "0.2.0"}
opendal = { version = "0.55", features = ["services-s3", "services-fs", "services-gcs", "services-azblob"] }
bytes = { workspace = true }
