[package]
name = "aquila_server"
version = "0.1.0"
edition = "2024"
description = "Aquila asset server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[dependencies]
aquila_core = { path = "../aquila_core" ,version = "0.1.0"}
axum = { workspace = true, features = ["macros"] }
anyhow = {workspace=true}
bytes = {workspace=true}
hex = {workspace = true}
sha2 ={workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
jsonwebtoken = { version = "10.2",features = ["rust_crypto"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
