[package]
name = "bevy_aquila"
version = "0.1.0"
edition = "2024"
description = "Aquila asset server bevy plugin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[dependencies]
aquila_client = { path = "../aquila_client",version = "0.1.0" }
aquila_core = { path = "../aquila_core" ,version = "0.1.0"}
bevy = { version = "0.17", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_winit", "x11", "tonemapping_luts", "bevy_ui", "png"] }
futures-lite = "2.0"
tokio = { version = "1.49", features = ["sync", "rt-multi-thread"] }
tracing = "0.1"
