[package]
name = "bevy_aquila"
version = "0.3.2"
edition = "2024"
description = "Aquila asset server bevy plugin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[dependencies]
aquila_client = { path = "../aquila_client",version = "0.3.0" }
aquila_core = { path = "../aquila_core" ,version = "0.3.0"}
bevy_asset = { version = "0.17" }
bevy_ecs= { version = "0.17" }
bevy_app ={version = "0.17"}
bevy_reflect ={version = "0.17"}
futures-lite = "2.0"
tokio = { version = "1.49", features = ["sync", "rt-multi-thread"] }
tracing = "0.1"
